# lux

./: .coveragerc  .coveralls-repo-token  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.rst  Gruntfile.js  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  agile.json  agileplay.py  auth-spec.yaml  bower.json  buildrelease.py  bundle.js  circle.yml  clean.py  config.py  devenv.py  install-dev.sh  karma.conf.js  lux_config.py  luxmake.py  makejstests.py  manage.py  package.json  release.py  requirements-dev.txt  requirements-soft.txt  requirements.txt  requirements_dev.txt  requirements_pre.txt  rollup.config.js  runtests.py  (+3 more)
.circleci/: config.yml
docs/: Makefile  application.md  authentication.md  changelog.md  conf.py  extensions.md  getting-started.rst  lux.sketch  make.bat  migrations.rst  notes.md  providers.md  readme.md  release.json  rest.md  testing.md
example/: Gruntfile.js  README.md  README.rst  __init__.py  cfg.py  karma.conf.js  manage.py  package.json
examples/: README.md  luxsite.py  requirements.txt  setup.py
js/: __init__.py  app.js  config.json  libs.json  require.config.js
js/cms/: api.js  (+10 more)
lux/: __init__.py  deps.json  libs.json  package.json
luxjs/: bootstrap.js  class.js  close.js  libs.json  open.js  require.js  utils.js
luxsite/: __init__.py  settings.py  src.js  ui.py
release/: 249.md  README.md  nodes.md  notes.md  release.json
releases/: notes.md  release.json
requirements/: dev.txt  hard.txt  soft.txt
scss/: _variables.scss
tests/: __init__.py  config.py  db.sql  dbclean.sql
(+1794 files in other folders)
