[aliases]
release = clean sdist bdist_wheel upload
test = pulsar_test

[flake8]
exclude = node_modules,docs,src,build,*/extensions/oauth/google/__init__.py,example/webalone/migrations,lux/core/commands/project_template/manage.py

[metadata]
license-file = LICENSE

[pulsar_test]
test_modules = tests
test_timeout = 30
